.github/diagnostics/issue-181-runtime-result-v5.txt
DIAGNOSTIC_V5
exit_code=1
--- STDOUT ---

--- STDERR ---
/tmp/issue-181-v5-czl6cizg/repository/.github/scripts/test_mission_requirements_runtime.js:833
const transitionRecord = { candidate: patientCandidate, source: patientCandidate.source, missionIdentity: 18101 };
      ^

SyntaxError: Identifier 'transitionRecord' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1713:18)
    at Module._compile (node:internal/modules/cjs/loader:1755:20)
    at Object..js (node:internal/modules/cjs/loader:1913:10)
    at Module.load (node:internal/modules/cjs/loader:1505:32)
    at Function._load (node:internal/modules/cjs/loader:1309:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:254:19)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.23.1
Traceback (most recent call last):
  File "/tmp/issue-181-v5-czl6cizg/repository/.github/development-packages/issue-181-patient-ambulance-demand.py", line 640, in <module>
    subprocess.run(["node", str(RUNTIME_TEST)], cwd=ROOT, check=True)
  File "/usr/lib/python3.12/subprocess.py", line 571, in run
    raise CalledProcessError(retcode, process.args,
subprocess.CalledProcessError: Command '['node', '/tmp/issue-181-v5-czl6cizg/repository/.github/scripts/test_mission_requirements_runtime.js']' returned non-zero exit status 1.
